# wasm-template

./: Cargo.toml  LICENSE_MIT  README-npm.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: web.rs
www/: index.html  main.js  package.json  vite.config.js
www/tests/: add.test.js
