[package]
name = "wasm-template"
version = "0.1.0"
authors = ["Riccardo Scalco <riccardo.scalco@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A template for WebAssembly modules to publish on the npm registry"
repository = "https://github.com/riccardoscalco/wasm-template"
readme = "README-npm.md"
keywords = ["wasm", "webassembly", "template", "javascript"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
